# bilibot-ros-pkg

./: ProjectHome.md
bilibot/bilibot_bringup/: minimal.launch  resetACM.c  robot.launch
bilibot/bilibot_bringup/upstart/: 56-ftdi-usb.rules  bilibot-start  install.bash
bilibot/bilibot_dashboard/src/bilibot_dashboard/: __init__.py  bilibot_frame.py  breaker_control.py  rosout_frame.py
bilibot/bilibot_navigation/: amcl_demo.launch
bilibot/bilibot_navigation/config/: global_costmap_params.yaml  local_costmap_params.yaml
bilibot/bilibot_node/: CMakeLists.txt  mainpage.dox  manifest.xml
bilibot/bilibot_node/include/: serial.h
bilibot/bilibot_node/msg/: PowerboardSensorState.msg
bilibot/bilibot_node/src/: node.cpp  node2.cpp  powerboard_sdk
bilibot/bilibot_node/srv/: SetMotorPWM.srv
bilibot/create_driver/: manifest.xml
bilibot/create_driver/src/: create_driver.py
bilibot/create_node/: manifest.xml
bilibot/create_node/cfg/: TurtleBot.cfgc
bilibot/create_node/nodes/: create_node.py
branches/cmakepowerboard/powerboard/: CMakeLists.txt  Makefile  pinmapping.h
branches/cmakepowerboard/powerboard/bootloader/: Makefile
branches/cmakepowerboard/powerboard/sdk/: wireformat.c  wireformat.h
branches/cmakepowerboard/powerboard/test/: test_wireformat.c
branches/pre-1.0-legacy-comms/bilibot/bilibot_navigation/: manifest.xml
branches/pre-1.0-legacy-comms/bilibot/bilibot_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml
branches/pre-1.0-legacy-comms/powerboard/: Makefile  adcread.c  motorcontrols.h  pinmapping.h
device_finder/: 66-bilibot.rules  devquery.cpp
motordriver/: Makefile  adc.h  adc2.h  buffer.h  motordriver.h  notes.txt  powerboard.c  ramp.h  simplehighmotor.h
motordriver/LUFA/Drivers/Board/: LEDs.h
motordriver/sdk/: wireformat.c  wireformat.h
motordriver/test/: Makefile
os_services/: network_client.py  ros_discovery_service.py  ros_master_selector.py
os_services/udev/: 70-disable-eth0-mdns.rules
pololu_driver/: manifest.xml
pololu_driver/src/: motortest.py
powerboard/: Makefile  arm_base.h  interrupts.h  lowlevelmotor.cpp  parser.h  pinmapping.h  pinmapping2.h  powerboard.c  powerboard.h  simplehighmotor.h  wireformat.h
powerboard/LUFA/Bootloaders/CDC/: BootloaderCDC.c  makefile
powerboard/LUFA/Demos/: makefile
powerboard/LUFA/LUFA/Drivers/Board/: Joystick.h
powerboard/LUFA_old/Demos/Device/ClassDriver/: makefile
powerboard/sdk/: wireformat.c  wireformat.h
powerboard/test/: test_wireformat.c
tags/pre-1.0-legacy-comms/bilibot/: stack.xml
tags/pre-1.0-legacy-comms/bilibot/bilibot_navigation/: mainpage.dox
tags/pre-1.0-legacy-comms/bilibot/bilibot_navigation/config/: amcl_nav.xml
tags/pre-1.0-legacy-comms/bilibot/bilibot_navigation/maps/: map.pgm  map.yaml
tags/pre-1.0-legacy-comms/device_finder/: 66-bilibot.rules  Makefile  readme.txt
tags/pre-1.0-legacy-comms/os_services/: ros_master_selector.py
tags/pre-1.0-legacy-comms/powerboard/: blink2.c  motortest.c
trunk/bilibot/bilibot_bringup/: CMakeLists.txt  base.launch  mainpage.dox  manifest.xml
trunk/bilibot/bilibot_bringup/upstart/: README  bilibot-boot.conf  bilibot-stop  bilibot.conf  bilibot.launch  install.bash
trunk/bilibot/bilibot_dashboard/: mainpage.dox  manifest.xml
trunk/bilibot/bilibot_dashboard/scripts/: bilibot_dashboard
trunk/bilibot/bilibot_dashboard/src/bilibot_dashboard/: diagnostics_frame.py  power_state_control.py  status_control.py
trunk/bilibot/bilibot_logging/: mainpage.dox  manifest.xml
trunk/bilibot/bilibot_navigation/config/: amcl_nav.xml  vis_nav.vcg
trunk/bilibot/bilibot_node/: CMakeLists.txt  manifest.xml
trunk/bilibot/bilibot_node/msg/: MotorState.msg
trunk/bilibot/bilibot_node/src/: node.cpp  node2.cpp  serial.cpp
trunk/bilibot/create_node/cfg/: TurtleBot.cfg  TurtleBot.cfgc
trunk/bilibot/create_node/nodes/: create_node.py
trunk/motordriver/: adc2.h  encoder.h  gyro.h  motordriver.h  music.h  powerboard.c  ramp.h  testtypeconv.c
trunk/os_services/: network_client.py  network_service.py  ros_discovery_service.py
trunk/pololu_driver/src/: driver.py
trunk/powerboard/: Descriptors.c  Makefile  adc.h  adcread.c  basictrans.c  parser.h  powerboard.c  simplehighmotor.h  togglects.c  usbreset.c  usbreset2.c
trunk/powerboard/LUFA/Common/: BoardTypes.h
trunk/powerboard/LUFA_old/: makefile
trunk/powerboard/LUFA_old/Bootloaders/: makefile
trunk/powerboard/sdk/: wireformat.c  wireformat.h
(+34 files in other folders)
